--- a/html/board.html
+++ b/html/board.html
@@ -58,7 +58,7 @@
                 <input type = "text" placeholder="아이디를 입력하세요">
                 
                 <input type = "password" placeholder="비밀번호를 입력하세요">
-               <button> 버튼생성 </button>
+               <button> 로그인 </button>
                
             </div>
         </DIV></div>
