--- a/html/home information.html
+++ b/html/home information.html
@@ -42,7 +42,7 @@
 
         nav{
             list-style-type:none;
-            padding:100=px;
+            padding:700=px;
             float: left;
             width:30%;
             height: 750px;
@@ -60,6 +60,7 @@
             height:30px;
             color:#5f4949;
             font-size: 20px;
+            border : 4px solid rgb(168, 162, 162) ;
         }
 
         .blogtitle{
@@ -132,7 +133,7 @@
 <body>
     <div class="container">
     <div class="blogtitle">
-    <h1>어텀이네 블로그</h1>
+    <h1>AUTUMN BLOG</h1>
     <p><h2>Welcome to my homepage!</h2></p>  
 
     </div>
