--- a/html/blog-board.html
+++ b/html/blog-board.html
@@ -19,11 +19,12 @@
 
         </DIV>
         <h2>새 게시물 작성</h2>
+        <img src="https://image.dongascience.com/Photo/2020/03/5bddba7b6574b95d37b6079c199d7101.jpg">
         <form id="postForm">
-            <label for = "title">제목 : </label>
+            <label for = "title" ><b>제목 :</b> </label>
             <input type ="text" id="title" name="title" required>
             <br>
-            <label for="content">내용 : </label>
+            <label for="content"><b>내용 :</b></label>
             <textarea id="content" name="content" required></textarea>
             <br>
             <button type="submit">게시하기</button>
