--- a/html/home information.html
+++ b/html/home information.html
@@ -200,7 +200,7 @@
     </script>
 
     <footer>
-        <button href src="https://blog.naver.com/gaury0722" >네이버블로그</button>
+        <li><a href src="https://blog.naver.com/gaury0722" >네이버블로그</a></li>
         <a href src="https://www.naver.com" >네이버</a>
         <button>티스토리</button>
         <button>인스타그램</button>
