--- a/html/pagination/imgpage.html
+++ b/html/pagination/imgpage.html
@@ -12,8 +12,8 @@
                 justify-content: center;
             }
             .image {
-                width: 500px;
-                height:500px;
+                width: 300px;
+                height:300px;
                 margin: 10px;
             }
         </style>
@@ -21,19 +21,19 @@
     <body>
        <h1>이미지 페이지네이션</h1> 
        <div id="pagination">
-        <button id="prevPage">이전</button>
+        
         <div class="img-container">
             <!-- 이미지를 추가하는 공간-->
         </div>
-        <button  id="nextPage"> 다음</button>
+        <button id="prevPage">이전</button> <button  id="nextPage"> 다음</button>
        </div>
        <script>
         const images=[
-        './사진/에몽가1.jpg',
-        './사진/에몽가2.jpg',
-        './사진/에몽가3.jpg',
-        './사진/에몽가4.jpg',
-        './사진/에몽가5.jpg',
+        './에몽가1.jpg',
+        './에몽가2.jpg',
+        './에몽가3.jpg',
+        './에몽가4.jpg',
+        './에몽가6.jpg',
         ];
         const imagesPerpage = 2;//한 페이지에 표시될 이미지 수
         //현재 페이지를 나타내는 변수
