--- a/html/snowblog.html
+++ b/html/snowblog.html
@@ -30,13 +30,15 @@
 			
 			</div>
 			<div class="profile">
-			<img src="./트리.PNG" style="width:400px;">
+				<div class="img">
+				<img src="./트리.PNG" style="width:400px;">
+				</div>
 			<div class ="buttons"></div>
 
 			<br>
 			<br>
 			<audio controls>
-				<source src="크리스마스.mp3".mp3" type="audio/mpeg">
+				<source src="캐롤.mp3".mp3" type="audio/mpeg">
 			</audio>
 			</div>
 		</div>
