--- a/html/popUp-post.html
+++ b/html/popUp-post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
     <head>
+        <meta charset="utf-8">
         <title> 팝업게시글 </title> 
         <link rel ="stylesheet" href="../html/css/blog.css">
     </head>
@@ -33,7 +34,9 @@
         <div class="큰배경">
                 <aside>
                 <h3>어텀이네 블로그에 오신 것을 환영합니다.</h3>
+                <div class="profile2">
                     <img src ="./사진/피카츄2.PNG" style="width:80%;">
+                </div>
                 <!-- <div id="pagination">
         
                     <div class="img-container">
@@ -91,50 +94,47 @@
 
     <div id="outer">
         <div class="snowflakes" aria-hidden="true">
-        <div class="snowflake" style="font-size: 16px">❆</div>
-        <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 16px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 16px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 16px">❆</div>
-        <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 16px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 50px">.</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
         <div class="snowflake" style="font-size: 16px">❆</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
+        <div class="snowflake" style="font-size: 50px">.</div>
+        <div class="snowflake" style="font-size: 50px">.</div>
+        <div class="snowflake" style="font-size: 50px">.</div>
+        <div class="snowflake" style="font-size: 20px">❆</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 50px">.</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
+        <div class="snowflake" style="font-size: 20px">❆</div>
+        <div class="snowflake" style="font-size: 16px">❆</div>
+        <div class="snowflake" style="font-size: 50px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
         <div class="snowflake" style="font-size: 20px">❆</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
         <div class="snowflake" style="font-size: 20px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
-        <div class="snowflake" style="font-size: 12px">❆</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
         <div class="snowflake" style="font-size: 20px">❆</div>
         <div class="snowflake" style="font-size: 12px">❆</div>
         <div class="snowflake" style="font-size: 20px">❆</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
+        <div class="snowflake" style="font-size: 40px">.</div>
         </div>
       </div>
 
-    <script src="../html/js/blog.js"></script>
+    <script src="./js/blog.js"></script>
     </body>
 
 </html>
