--- a/html/test2.html
+++ b/html/test2.html
@@ -16,7 +16,9 @@
 
     h1{
         text-shadow: 2px 2px 0px rgb(128, 128, 128);
-        text-align: center;
+       margin-left: 600px;
+        margin-top: -100px;
+        margin-bottom: 0px;
     }
 
     h3{
@@ -26,21 +28,28 @@
     button{
         background:none;
         border:none;   
-        padding-right: 50px; 
+        margin-left: 50px;
+        text-align:center;
+    }
+
+    body{
+     height: 900px;
     }
 
     #buttons{
         text-align: center;
         padding-top: 10px;
-        background-color: rgb(252, 166, 80);
-        box-shadow: 0px 2px 4px rgb(128, 128, 128);
+        background :linear-gradient(rgb(255, 194, 133),rgb(247, 222, 198),rgb(66, 253, 247)) ;
+        box-shadow: 0px 10px 10px rgb(10, 190, 196);
         height: 25px;
         max-width: 1400px;
     }
 
     #reviewWritebox{
+        
+        max-width: 1400px;
         height: 600px;
-        box-shadow: 0px 2px 4px rgb(128, 128, 128);
+        box-shadow: 0px 1px 1px rgb(128, 128, 128);
         margin-top: -20px;
        text-align: center;
     }
@@ -61,13 +70,19 @@
         text-align: center;
     }
 
+    #야자수{
+    margin-left: 470px;
+    margin-bottom: -20px;
+    }
+
         </style>
     </head>
     <body>
-        <img src="../html/야자수.png">
+
+        <img src="../html/야자수.png" id="야자수" style="width:200px;">
         <h1>GO, FESTIVAL</h1>
 
-        <Button style="float:right;">로그인 | 회원가입</Button>
+        <Button style="float:right;margin-right: 80px;">로그인 | 회원가입</Button>
         <br>
         <div id="buttons">
             <button>행사정보</button>
@@ -90,6 +105,8 @@
             <br>
             <input type="submit" style="width:80px;height: 25px;">
         </div>
-        
+        <br>
+        <button style="border-radius:10px;height: 30px;width:60px;background-color: antiquewhite;margin-left: 610px;">이전</button>
+        <button style="border-radius:10px;height: 30px;width:60px;background-color: antiquewhite;">다음</button>
     </body>
 </html>
